Tue Nov 09 23:18:36 GMT 2010  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc,
	  backends/flint/flint_compact.cc: Fix access to empty priority_queue
	  while merging synonyms (found with _GLIBCXX_DEBUG).

Tue Nov 09 03:23:49 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING: Drop list of platforms valgrind supports, as it takes
	  effort to keep up to date.  People can check valgrind.org for an
	  accurate list of currently supported platforms.

Sun Nov 07 14:13:44 GMT 2010  Olly Betts <olly@survex.com>

	* api/compactor.cc,backends/brass/brass_compact.cc,
	  backends/chert/chert_compact.cc,backends/flint/flint_compact.cc,
	  bin/xapian-compact.cc,include/xapian/compactor.h:
	  Compactor::resolve_duplicate_metadata() callback method is now passed
	  an array of std::string plus the array length, which allows for more
	  efficient merging that the series of pairwise merges which was
	  required before.

Mon Nov 01 14:47:37 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/multimatch.cc,matcher/multixorpostlist.cc,
	  matcher/multixorpostlist.h: Add debugging to print out the
	  postlist description after recalculation of maxweight, and to
	  MultiXorPostList methods.  Fix problem shown by soaktest where
	  the matcher was not told to recalculate the maxweight after a
	  MultiXorPostList child reached end, which was causing an
	  assertion failure in debug builds.  (This could also have been
	  causing some performance problems, but I have not measurements.)

Mon Nov 01 10:34:30 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/soaktest/soaktest_queries.cc: Fix compilation: call c_str()
	  on argument to atoi, now that util.h no longer defines a string
	  wrapper.

Sun Oct 31 10:51:12 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Don't delete this in TermGroup, etc
	  until after we have successfully constructed the Query object to